# compute

./: .dockerignore  .gitignore  .gitmodules  .rustfmt.toml  .solcover.js  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING  Dockerfile  README.md  buidler.config.js  buidler.config.ts  config-example.yaml  config-template.yaml  coverage.sh  deploy_development.sh  deploy_unit_tests.sh  diff.txt  dispatcher-entrypoint.sh  docker-compose-template.yml  file-save.yaml  foundry.toml  hardhat.config.ts  instantiate_descartes.js  package.json  requirements.txt  run_python_tests.sh  swarm.key  truffle-config.js  tsconfig.json
cartesi_compute/: Cargo.toml  Cargo_cache.toml
cartesi_compute/src/: cartesi_compute.rs  descartes.rs  lib.rs  main.rs
ipfs_interface/: Cargo.toml  build.rs
ipfs_interface/src/: lib.rs
machine/: Cargo.toml
machine/cartesi-jsonrpc-interfaces/: Cargo.toml
machine/cartesi-jsonrpc-interfaces/src/: index.rs
machine/computation/: Cargo.toml
machine/computation/src/: commitment.rs  constants.rs  fake_commitment.rs  machine.rs
machine/cryptography/: Cargo.toml
machine/cryptography/src/: hash.rs  merkle_builder.rs  merkle_tree.rs  mod.rs
machine/jsonrpc-cartesi-machine/: README.md
machine/jsonrpc-cartesi-machine/src/: conversions.rs  lib.rs  test_client.rs
machine/jsonrpc-cartesi-machine/tests/: cartesi_machine_client_tests.rs
machine/src/: computation.rs  mod.rs
machine/utils/src/: arithmetic.rs  eth_ebi.rs
offchain/: Cargo.toml  Dockerfile  build.rs  docker-compose.yml
offchain-rust/: Cargo.toml  Dockerfile  README.md
offchain-rust/cartesi-jsonrpc-interfaces/src/: index.rs  lib.rs  openrpc.json
offchain-rust/computation/: Cargo.toml
offchain-rust/computation/src/: commitment.rs  constants.rs  interval.rs  machine.rs  machine_test.rs  mod.rs  result.rs
offchain-rust/cryptography/: Cargo.toml
offchain-rust/cryptography/src/: hash.rs  merkle_builder.rs  merkle_tree.rs
offchain-rust/jsonrpc-cartesi-machine/: Cargo.toml
offchain-rust/jsonrpc-cartesi-machine/src/: conversions.rs  lib.rs  test_client.rs
offchain-rust/lib/grpc-interfaces/: CHANGELOG.md  Makefile  README.md  cartesi-machine-checkin.proto  cartesi-machine.proto  ipfs.proto  logger.proto  machine-manager.proto  p2p.proto  server-manager.proto  state-fold-server.proto  stateserver.proto  versioning.proto
offchain-rust/lib/grpc-interfaces/.github/workflows/: doc.yaml
offchain-rust/program/: gen_machine_simple.sh
offchain-rust/src/: constants.rs  main.rs
offchain-rust/src/program/: gen_machine_linux.sh  gen_machine_simple.sh
offchain-rust/utils/: Cargo.toml
offchain-rust/utils/src/: arithmetic.rs  bint.rs  mod.rs
offchain/compute-server/: Cargo.toml  build.rs
offchain/compute-server/artifacts/: MiddleTournamentFactory.json  NonLeafTournament.json  RootTournament.json  Tournament.json
offchain/compute-server/src/: engine.rs  lib.rs  main.rs  player.rs  server.rs
offchain/compute-server/src/arena/: arena.rs  ethers_arena.rs  mod.rs  util.rs
offchain/compute-server/src/commitment/: commitment.rs  commitment_builder.rs  constants.rs  machine_manager.rs  mod.rs  remote_machine.rs
offchain/compute-server/src/contract/: mod.rs
offchain/compute-server/src/contract/factory/: mod.rs  tournament_factory.rs
offchain/compute-server/src/grpc/: mod.rs
offchain/compute-server/src/machine/: commitment.rs  commitment_builder.rs  constants.rs  machine.rs  mod.rs  rpc.rs
offchain/compute-server/src/merkle/: builder.rs  hash.rs  mod.rs  node.rs  tree.rs  tree_builder.rs  tree_node.rs
offchain/compute-server/src/utils/: arithmetic.rs
offchain/compute-simulator/: Cargo.toml
offchain/compute-simulator/data/: README.md  gen_machine_linux.sh
offchain/compute-simulator/src/: main.rs
offchain/coordinator/: Cargo.toml  build.rs
offchain/coordinator/proto/: coordinator.proto
offchain/coordinator/src/: lib.rs  main.rs  server.rs
offchain/coordinator/src/grpc/: coordinator.rs  mod.rs
offchain/core/: Cargo.toml  build.rs
offchain/core/artifacts/: BottomTournamentFactory.json  LeafTournament.json  SingleLevelTournamentFactory.json  TopTournamentFactory.json  TournamentFactory.json
offchain/core/src/: lib.rs
offchain/core/src/arena/: arena.rs  config.rs  ethers_arena.rs  mod.rs
offchain/core/src/contract/factory/: tournament_factory.rs
offchain/core/src/contract/tournament/: leaf_tournament.rs  non_leaf_tournament.rs  non_root_tournament.rs  root_tournament.rs  tournament.rs
offchain/core/src/machine/: commitment.rs  constants.rs  mod.rs  rpc.rs
offchain/core/src/merkle/: hash.rs  tree.rs  tree_builder.rs
offchain/core/src/utils/: arithmetic.rs
offchain/machine-json-rpc/: Cargo.toml
offchain/machine-json-rpc/src/: lib.rs
offchain/machine-json-rpc/src/client/: conversions.rs  mod.rs
offchain/machine-json-rpc/src/interfaces/: mod.rs
offchain/proto/: compute.proto
offchain/simulator/: Cargo.toml  docker-compose.yml
offchain/simulator/data/: .gitignore  README.md  gen_machine_linux.sh  gen_machine_simple.sh
offchain/simulator/src/: engine.rs  main.rs
offchain/src/: arena.rs  commitment.rs  config.rs  dispute.rs  engine.rs  lib.rs  machine.rs  manager.rs  player.rs  server.rs
offchain/src/abi/: InnerTournamentFactory.json  RootTournament.json
offchain/src/arena/: arena.rs  ethers_arena.rs  mod.rs
offchain/src/contract/: bytecode.rs  inner_tournament_factory.rs  mod.rs  root_tournament.rs  root_tournament_factory.rs
offchain/src/contract/artifacts/: RootTournamentFactory.json
offchain/src/contract/factory/: tournament_factory.rs
offchain/src/contract/factory/artifact/: BottomTournamentFactory.json  MiddleTournamentFactory.json  SingleLevelTournament.json  TopTournamentFactory.json  TournamentFactory.json
offchain/src/contract/tournament/: leaf_tournament.rs  mod.rs  non_leaf_tournament.rs  root_tournament.rs  tournament.rs
offchain/src/contract/tournament/artifact/: LeafTournament.json  NonLeafTournament.json  (+3 more)
offchain/src/grpc/: compute.rs  mod.rs
offchain/src/machine/: commitment.rs  machine.rs  mod.rs
(+255 files in other folders)
