[package]
description = "Cartesi Compute SDK"
homepage = "https://cartesi.io"
name = "cartesi_compute"
version = "0.1.0"
authors = ["Cartesi Team"]

[dependencies]
log = "0.4"
env_logger = "0.6.0"
error = { path = "../arbitration-dlib/dispatcher/error" }
transaction = { path = "../arbitration-dlib/dispatcher/transaction" }
configuration = { path = "../arbitration-dlib/dispatcher/configuration" }
utils = { path = "../arbitration-dlib/dispatcher/utils" }
ethereum-types = "0.9.0"
ethabi = "12.0.0"
serde_json = "1.0"
serde = "1.0.0"
serde_derive = "1.0.0"
state = { path = "../arbitration-dlib/dispatcher/state" }
dispatcher = { path = "../arbitration-dlib/dispatcher/dispatcher" }
compute = { path = "../arbitration-dlib/compute" }
logger_service = { path = "../logger-dlib/logger_service" }
grpc = { git = "https://github.com/cartesi/grpc-rust", branch = "make_marshall_public" }
ipfs_interface = { path = "../ipfs_interface" }
protobuf = "=2.8.1"
bytes = "0.4.12"
hex = "0.3.2"
uint = "=0.8.3"
syn = "=1.0.57"
