[package]
name = "machine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "machine"
path = "src/mod.rs"

[dependencies]
jsonrpc-cartesi-machine = {path="jsonrpc-cartesi-machine"}
cartesi-jsonrpc-interfaces = {path="cartesi-jsonrpc-interfaces"}
tokio = { version = "1.16.0", features = ["macros", "rt-multi-thread","time"]}
once_cell = "1.18.0"
computation = {path="computation"}
cryptography = {path="cryptography"}
hex = "0.4.3"
