[package]
name = "offchain-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = "0.4.3"
computation = { path = "computation" }
cryptography = { path = "cryptography" }
jsonrpc-cartesi-machine = {path="jsonrpc-cartesi-machine"}
tokio = { version = "1.16.0", features = ["macros", "rt-multi-thread","time"]}

[workspace]

members = [
    "utils",
    "computation",
    "cryptography",
]
