[package]
name = "cartesi_compute"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "cartesi-compute-server"
path = "src/server.rs"

[dependencies]
tonic = "0.9.2"
prost = "0.11.9"
tokio = { version = "1.29.1", features = ["full"] }
ethers = "2.0.8"
once_cell = "1.18.0"
hex = "0.4.3"


[build-dependencies]
tonic-build = "0.9.2"
ethers-contract-abigen = "2.0.8" 
ethers-solc = "2.0.8"