[package]
name = "computation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "computation"
path = "src/mod.rs"

[dependencies]
cryptography = { path = "../cryptography" }
utils = { path = "../utils" }
jsonrpc-cartesi-machine = {path="../jsonrpc-cartesi-machine"}
cartesi-jsonrpc-interfaces = {path="../cartesi-jsonrpc-interfaces"}
tokio = { version = "1.16.0", features = ["macros", "rt-multi-thread","time"]}
once_cell = "1.18.0"
hex = "0.4.3"
sha3 = "0.10.8"
