[package]
name = "cryptography"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cryptography"
path = "src/mod.rs"

[dependencies]
utils = { path = "../utils" }
once_cell = "1.18.0"
sha3 = "0.10.8"
hex = "0.4.3"
