# Copyright 2023 Cartesi Pte. Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not use
# this file except in compliance with the License. You may obtain a copy of the
# License at http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software distributed
# under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR
# CONDITIONS OF ANY KIND, either express or implied. See the License for the
# specific language governing permissions and limitations under the License.

[package]
name = "jsonrpc-cartesi-machine"
version = "0.1.0"
authors = ["Marko Atanasievski <marko.atanasievski@cartesi.io>"]
edition = "2018"


[lib]
name = "jsonrpc_cartesi_machine"
path = "src/lib.rs"

[[bin]]
name = "jsonrpc-cartesi-machine-test"
path = "src/test_client.rs"

[dependencies]
cartesi-jsonrpc-interfaces = { path = "../cartesi-jsonrpc-interfaces" }
tonic = "0.8.2"
prost = "0.11"
tokio = { version = "1.16.1", features = ["macros", "rt-multi-thread","time"]}
rstest = "0.11.0"
async-std = { version = "1.5", features = ["attributes"] }
rand = "0.8.4"
base64 = "0.21.2"
serde_json = "1.0"
serde = "1.0.164"
jsonrpsee = {version = "0.18.2", features=["jsonrpsee-http-client"]}
async-mutex = "1.4.0"

anyhow = "1.0.71"

[build-dependencies]
tonic-build = "0.8.2"

[dev-dependencies]
async-mutex = "1.4.0"








