[package]
name = "cartesi_compute"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "cartesi-compute-server"
path = "src/main.rs"

[dependencies]
log = "0.4"
tonic = "0.9.2"
prost = "0.11.9"
tokio = { version = "1.29.1", features = ["full"] }
ethers = "2.0.8"
hex = "0.4.3"
async-trait = "0.1.72"
primitive-types = "0.12.1"
thiserror = "1.0"
futures = "0.3"
async-std = "1.12.0"
tokio-util = "0.7.8"
sha3 = "0.10.8"

[build-dependencies]
tonic-build = "0.9.2"
ethers-contract-abigen = "2.0.8" 
ethers-solc = "2.0.8"
