[package]
name = "cartesi-compute-simulator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cartesi-compute-simulator"
path = "src/main.rs"

[dependencies]
log = "0.4"
tokio = { version = "1.29.1", features = ["full"] }
ethers = "2.0.8"
cartesi-machine-json-rpc = { path = "../machine-json-rpc" }
cartesi-compute-server = { path = "../compute-server" }
