[package]
name = "cartesi-compute-core"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
log = "0.4"
tokio = { version = "1.29.1", features = ["full"] }
ethers = "2.0.8"
hex = "0.4.3"
async-trait = "0.1.72"
primitive-types = "0.12.1"
sha3 = "0.10.8"
serde_json = "1.0.107"
cartesi-machine-json-rpc = { path = "../machine-json-rpc" }

[build-dependencies]
ethers-contract-abigen = "2.0.8" 
ethers-solc = "2.0.8"
