[package]
name = "cartesi-machine-json-rpc"
version = "0.1.0"
edition = "2018"
authors = [
  "Zachary Belford <belfordz66@gmail.com>",
  "Mike Lubinets <public@mersinvald.me>",
  "Marko Atanasievski <marko.atanasievski@cartesi.io>",
]

[dependencies]
anyhow = "1.0.75"
base64 = "0.21.3"
derive_builder = "0.12.0"
jsonrpsee = {version = "0.18.2", features=["client-core", "jsonrpsee-http-client"]}
prost = "0.12.0"
rand = "0.8.5"
serde = "1.0.188"
serde_json = "1.0.105"
tokio = "1.32.0"
tonic = "0.10.0"
