[package]
name = "cartesi-compute-simulator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cartesi-compute-simulator"
path = "src/main.rs"

[dependencies]
log = "0.4"
tonic = "0.9.2"
tokio = { version = "1.29.1", features = ["full"] }
ethers = "2.0.8"
thiserror = "1.0"
tokio-util = "0.7.8"
cartesi-compute-core = { path = "../core" }
cartesi-compute-coordinator = { path = "../coordinator" }
